@@ -1,3 +1,9 @@
+2008-03-06  Dan Williams  <dcbw@redhat.com>
+
+	* src/wireless-dialog.c
+		- (security_combo_changed): warn when nothing is selected in the security
+			combo and don't crash
+
 2008-03-02  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet-dbus-settings.c
